--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,7 @@ LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=
 LANGCHAIN_PROJECT=
 OPENAI_API_KEY=
+
+# Optional
+LANGCHAIN_HIDE_INPUTS=true
+LANGCHAIN_HIDE_OUTPUTS=true
